# dtz-sdk-for-rust

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clean.sh  dtz-billing-api.yaml  dtz-containerregistry-api.yaml  dtz-containers-api.yaml  dtz-core-api.yaml  dtz-flows-api.yaml  dtz-identity-api.yaml  dtz-objectstore-api.yaml  dtz-observability-api.yaml  dtz-rss2email-api.yaml  generate.sh
dtz/: Cargo.toml  README.md
dtz-billing/: Cargo.toml  README.md
dtz-billing/docs/: CheckFunded200Response.md  Consumption.md  ConsumptionValue.md  ConsumptionValuesInner.md  DefaultApi.md  GetStats200Response.md  GetStats200ResponseBalance.md  GetStats200ResponseEuro.md  GetStats200ResponsePreviousDay.md  Transaction.md  Usage.md
dtz-billing/src/apis/: configuration.rs  default_api.rs
dtz-billing/src/models/: check_funded_200_response.rs  consumption.rs  consumption_value.rs  consumption_values_inner.rs  get_stats_200_response.rs  get_stats_200_response_balance.rs  get_stats_200_response_euro.rs  get_stats_200_response_previous_day.rs  mod.rs  transaction.rs  usage.rs
dtz-config/: Cargo.toml
dtz-config/src/: lib.rs
dtz-containers/: Cargo.toml  README.md
dtz-containers/docs/: CreateDomain.md  CreateDomainRequest.md  CreateJob.md  CreateJob400Response.md  CreateJobEnvVariablesValue.md  CreateJobRequest.md  CreateJobRequestEnvVariablesValue.md  CreateService.md  CreateServiceRequest.md  CreateVolumeRequest.md  DefaultApi.md  Domain.md  EncryptedValue.md  ErrorResponse.md  GetJobs200ResponseInner.md  JobPostRequest.md  JobResponse.md  JobResponseEnvVariablesValue.md  JobResponseEnvVariablesValueOneOf.md  PlainValue.md  Service.md  ServiceEnvVariablesValue.md  ServiceEnvVariablesValueOneOf.md  ServiceLogin.md  ServiceRewrite.md  UpdateHostingRequest.md  UpdateHostingRequestDomainsInner.md  UpdateHostingRequestDomainsInnerRoutingInner.md  UpdateHostingRequestDomainsInnerRoutingInnerServiceDefinition.md  UpdateService.md  UpdateServiceLogin.md  UpdateServiceRequest.md  UpdateServiceRequestEnvVariablesValue.md  UpdateServiceRequestEnvVariablesValueOneOf.md  UpdateServiceRequestEnvVariablesValueOneOf1.md  UpdateServiceRequestLogin.md  UpdateServiceRequestRewrite.md  UpdateVolumeRequest.md  Volume.md  VolumeMount.md  (+1 more)
dtz-containers/src/apis/: configuration.rs  default_api.rs  mod.rs
dtz-containers/src/models/: _job_post_request.rs  create_domain.rs  create_domain_request.rs  create_job.rs  create_job_400_response.rs  create_job_env_variables_value.rs  create_job_request.rs  create_job_request_env_variables_value.rs  create_service.rs  create_service_request.rs  create_volume_request.rs  domain.rs  encrypted_value.rs  error_response.rs  get_jobs_200_response_inner.rs  job_response.rs  job_response_env_variables_value.rs  mod.rs  plain_value.rs  service.rs  service_login.rs  service_rewrite.rs  update_hosting_request.rs  update_hosting_request_domains_inner.rs  update_hosting_request_domains_inner_routing_inner.rs  update_hosting_request_domains_inner_routing_inner_service_definition.rs  update_service.rs  update_service_login.rs  update_service_request.rs  update_service_request_env_variables_value.rs  update_service_request_env_variables_value_one_of.rs  update_service_request_env_variables_value_one_of_1.rs  update_service_request_login.rs  update_service_request_rewrite.rs  update_volume_request.rs  volume.rs  (+2 more)
dtz-core/: Cargo.toml  README.md
dtz-core/docs/: Chat.md  ChatPrivileges.md  ChatResponseMessage.md  ChatTimelineInner.md  Container.md  ContainerMountsInner.md  ContextResponse.md  CreateChatRequest.md  CreateContext200Response.md  CreateContextRequest.md  CreateIngressContentRequest.md  CreateIngressRequest.md  CreateIngressRequestContainer.md  CreateIngressRequestStaticContent.md  CreateIngressRequestStaticContentHeaderInner.md  CreateJobRequest.md  CreateJobRequestJobDefinition.md  CreateSupportRequestRequest.md  CreateTask200Response.md  CreateTaskRequest.md  CreateTaskRequestTaskDefinition.md  CreateTaskResponse.md  DefaultApi.md  DeleteContext200Response.md  EnvironmentVariablesValue.md  GetAllContext200Response.md  GetAllContext200ResponseContextsInner.md  GetContext200Response.md  GetIngress200ResponseInner.md  IngressResponse.md  IngressResponseInner.md  IssueCertificateRequest.md  ListChat200ResponseInner.md  Login.md  PullJobFromQueue200Response.md  PullJobFromQueueRequest.md  PullTaskFromQueue200Response.md  PullTaskFromQueueRequest.md  PullTaskResponse.md  PullTaskResponseMountsInner.md  (+9 more)
dtz-identifier/: Cargo.toml
dtz-identifier/src/: apikey_id.rs  case_id.rs  chat_id.rs  context_id.rs  execution_id.rs  feed_id.rs  identity_id.rs  job_id.rs  lib.rs  node_id.rs  object_id.rs  role_id.rs  service_id.rs  task_id.rs  volume_id.rs
dtz-objectstore/: Cargo.toml  README.md
dtz-objectstore/docs/: DefaultApi.md  Object.md  ObjectMetadata.md  Stats.md  Stats200Response.md
dtz-objectstore/examples/: get_object.rs  put_object.rs
dtz-observability/: Cargo.toml  README.md
dtz-observability/docs/: DefaultApi.md  DtzLogsInner.md  DtzMetric.md  GetBuildInfo200Response.md  GetBuildInfo200ResponseData.md  GetLogActivity200ResponseInner.md  GetLogAttributes200ResponseInner.md  GetLogs200ResponseInner.md  GetMetricMetadata200Response.md  GetStats200Response.md  ListLabelValues200Response.md  LogActivityGet200ResponseInner.md  LogAttributeGet200ResponseInner.md  LogPushPostRequestInner.md  LogPushPostRequestInnerAttachmentsInner.md  LogPushPostRequestInnerLinksInner.md  PostLogRequestInner.md  PostLogRequestInnerAttachmentsInner.md  PostLogRequestInnerLinksInner.md  PostMetricRequestInner.md  QueryLogsRequest.md
dtz-rss2email/: Cargo.toml  README.md
dtz-rss2email/docs/: CreateFeed200Response.md  CreateFeedRequest.md  DefaultApi.md  DiscoverFeed200Response.md  DiscoverFeedRequest.md  ErrorMessage.md  Feed.md  FeedRequest.md  FeedResponse.md  FeedStatistics.md  GetProfile200Response.md  Profile.md  ProfileResponse.md  Rss2emailDiscoverPost200Response.md  Rss2emailFeedPost200Response.md  Rss2emailFeedPostRequest.md
dtz-rss2email/src/: lib.rs
dtz/src/: lib.rs
(+262 files in other folders)
