[workspace]
package.rust-version = "1.87"
package.edition = "2024"
members = [
    "dtz",
    "dtz-billing",
    "dtz-config",
    "dtz-containerregistry",
    "dtz-containers",
    "dtz-core",
    "dtz-identifier",
    "dtz-identity",
    "dtz-objectstore",
    "dtz-observability",
    "dtz-rss2email",
]
resolver = "3"

[workspace.dependencies]
dtz-billing = { version = "=2.1.2", path = "./dtz-billing" }
dtz-config = { version = "1.0.4", path = "./dtz-config" }
dtz-containerregistry = { version = "=2.0.4", path = "./dtz-containerregistry" }
dtz-containers = { version = "=2.2.5", path = "./dtz-containers" }
dtz-core = { version = "=2.3.4", path = "./dtz-core" }
dtz-identifier = { version = "1.5.3", path = "./dtz-identifier" }
dtz-identity = { version = "=2.1.5", path = "./dtz-identity" }
dtz-objectstore = { version = "=2.1.5", path = "./dtz-objectstore" }
dtz-observability = { version = "=2.0.3", path = "./dtz-observability" }
dtz-rss2email = { version = "=2.0.5", path = "./dtz-rss2email" }
serde = "1"
serde_derive = "1"
serde_json = "1"
serde_with = { version = "3", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
url = "2"
[workspace.dependencies.reqwest]
version = "0.13"
default-features = true
features = [
    "json",
    "multipart",
    "rustls",
    "http2",
    "zstd",
    "query",
    "form",
]

[workspace.dev-dependencies]
dtz = { version = "1" }
tokio = { version = "1", features = ["full"] }
