[package]
name = "dtz-containers"
version = "2.2.4"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ Containers API"
license = "MIT OR Apache-2.0"
edition.workspace = true
rust-version.workspace = true
repository = "https://github.com/DownToZero-Cloud/dtz-sdk-for-rust"
documentation = "https://docs.rs/dtz"
homepage = "https://downtozero.cloud"

[dependencies]
dtz-config = { workspace = true }
dtz-identifier = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_repr = "^0.1"
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
dtz = { path = "../dtz" , features = ["full"] }
tokio = { version = "1", features = ["full"] }