[package]
name = "dtz-core"
version = "1.0.0"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ Core API"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
dtz = { path = "../dtz" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls", "rustls-tls-webpki-roots"]
