[package]
name = "dtz-identifier"
version = "1.0.6"
edition = "2021"
rust-version.workspace = true
authors = ["jens@apimeister.com"]
description = "identifier crate for the DownToZero Cloud API"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1" }
uuid = { version = "1", features = ["serde", "v7"] }
