[package]
name = "dtz-objectstore"
version = "1.0.0"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ Objectstore API"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.63"

[dependencies]
dtz = { path = "../dtz" }
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.12"
default-features = false
features = ["json", "multipart", "rustls-tls", "rustls-tls-webpki-roots"]
