[package]
name = "dtz-objectstore"
version = "1.0.6"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ Objectstore API"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dtz-config = { workspace = true }
dtz-identifier = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
