[package]
name = "dtz-observability"
version = "1.0.10"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ Observability API"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dtz-config = { workspace = true }
dtz-identifier = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
