[package]
name = "dtz-rss2email"
version = "1.0.0"
authors = ["jens@apimeister.com"]
description = "a generated client for the DTZ RSS2Email API"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dtz-config = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
