[package]
name = "dtz"
version = "0.5.11"
edition = "2021"
authors = ["jens@apimeister.com"]
description = "The DownToZero Cloud SDK"
license = "MIT OR Apache-2.0"
rust-version.workspace = true
repository = "https://github.com/DownToZero-Cloud/dtz-sdk-for-rust"
documentation = "https://docs.rs/dtz"

[features]
billing = ["dep:dtz-billing"]
containerregistry = ["dep:dtz-containerregistry"]
containers = ["dep:dtz-containers"]
core = ["dep:dtz-core"]
identity = ["dep:dtz-identity"]
full = [
    "billing",
    "containerregistry",
    "containers",
    "core",
    "identity",
    "objectstore",
    "observability",
    "rss2email",
]
objectstore = ["dep:dtz-objectstore"]
observability = ["dep:dtz-observability"]
rss2email = ["dep:dtz-rss2email"]

[dependencies]
dtz-billing = { version = "=1.0.0", optional = true, path = "../dtz-billing" }
dtz-config = { workspace = true }
dtz-containerregistry = { version = "=1.0.0", optional = true, path = "../dtz-containerregistry" }
dtz-containers = { workspace = true, optional = true }
dtz-core = { workspace = true, optional = true }
dtz-identifier = { workspace = true }
dtz-identity = { workspace = true, optional = true }
dtz-objectstore = { version = "=1.0.5", optional = true, path = "../dtz-objectstore" }
dtz-observability = { version = "=1.0.1", optional = true, path = "../dtz-observability" }
dtz-rss2email = { version = "=1.0.5", optional = true, path = "../dtz-rss2email" }

[package.metadata.docs.rs]
all-features = true
