[package]
name = "dtz"
version = "1.3.1"
edition.workspace = true
authors = ["jens@apimeister.com"]
description = "The DownToZero Cloud SDK"
license = "MIT OR Apache-2.0"
rust-version.workspace = true
repository = "https://github.com/DownToZero-Cloud/dtz-sdk-for-rust"
documentation = "https://docs.rs/dtz"
homepage = "https://downtozero.cloud"
keywords = ["dtz", "downtozero", "cloud"]
categories = ["api-bindings", "development-tools"]

[features]
billing = ["dep:dtz-billing"]
containerregistry = ["dep:dtz-containerregistry"]
containers = ["dep:dtz-containers"]
core = ["dep:dtz-core"]
identity = ["dep:dtz-identity"]
full = [
    "billing",
    "containerregistry",
    "containers",
    "core",
    "identity",
    "objectstore",
    "observability",
    "rss2email",
]
objectstore = ["dep:dtz-objectstore"]
observability = ["dep:dtz-observability"]
rss2email = ["dep:dtz-rss2email"]

[dependencies]
dtz-billing = { workspace = true, optional = true }
dtz-config = { workspace = true }
dtz-containerregistry = { workspace = true, optional = true }
dtz-containers = { workspace = true, optional = true }
dtz-core = { workspace = true, optional = true }
dtz-identifier = { workspace = true }
dtz-identity = { workspace = true, optional = true }
dtz-objectstore = { workspace = true, optional = true }
dtz-observability = { workspace = true, optional = true }
dtz-rss2email = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
